assets/css/overrides.css
@font-face {
	font-family: 'Montserrat';
	src: url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,800');
}

.MuiIconButton-colorPrimary {
  color: #fff !important;
  width: 30px;
  height: 30px;
  background: #06c3e1 !important;
  border-radius: 50%;
}

.MuiIconButton-colorPrimary:hover {
  background-color: #01bedc !important;
}

.MuiIconButton-root.MuiCheckbox-colorSecondary {
  color: #06C1E1 !important;
  border-radius: 3px;
  height: 30px;
  width: 30px;
  padding: 0px;
}

.MuiTableCell-root {
  font-family: 'Montserrat', sans-serif !important;
  color: #717a8a !important;
}

.MuiButton-containedSecondary {
  background-color: #FB7F6B !important;
  color: #ffffff;
}

.MuiPaper-root.MuiPaper-elevation1.MuiExpansionPanel-root.MuiExpansionPanel-rounded.MuiPaper-rounded {
  box-shadow: none;
}

.MuiExpansionPanel-root:before, .MuiExpansionPanel-root:after {
  top: -1px;
  left: 0;
  right: 0;
  height: 1px;
  content: "";
  opacity: 1;
  position: absolute;
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  background-color: #e6e7e8 !important;
}

.MuiIconButton-root {
  flex: 0 0 auto;
  color: #06c3e1;
  width: 30px;
  height: 30px;
  padding: 0px !important;
  overflow: visible;
  font-size: 1.5rem;
  text-align: center;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 3px;
}

.MuiIconButton-colorPrimary {
  color: #fff !important;
  width: 30px;
  height: 30px;
  background: #06c3e1;
  border-radius: 50%;
}

.MuiIconButton-colorSecondary {
  background: #FB7F6B !important;
}
/* containedPrimary: {
  backgroundColor: '#06c3e1 !important',
  color: '#fff',
  '&:hover': {
      backgroundColor: '#01bedc !important',
  },
  '&$disabled': {
      color: '#c6c9d0 !important',
      background: '#e2e4e7 !important'
  }
}, */

